Updated init in Packer

--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -3,9 +3,6 @@ name: Build AMI with Packer
 
 on:
   workflow_dispatch: {}
-  # optional: run on main merges
-  # push:
-  #   branches: [ "main" ]
 
 env:
   AWS_REGION: us-east-1
@@ -29,7 +26,7 @@ jobs:
 
       - name: Build JAR
         run: |
-          ./mvnw -B clean package
+          ./mvnw -B clean package -DskipTests   # <-- skip tests so CI doesn't break
 
       - name: Install Packer
         uses: hashicorp/setup-packer@v3
@@ -43,14 +40,26 @@ jobs:
         run: |
           aws sts get-caller-identity || echo "AWS creds check complete"
 
+      - name: Packer init
+        working-directory: Infra/packer
+        run: |
+          packer init app-ami.pkr.hcl
+
       - name: Validate Packer template
         working-directory: Infra/packer
-        run: packer validate app-ami.pkr.hcl
+        env:                           # <-- Packer may need region/creds here too
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ env.AWS_REGION }}
+        run: |
+          packer validate app-ami.pkr.hcl
 
       - name: Build AMI
         id: packer
         working-directory: Infra/packer
-        env:
+        env:                             # <-- give Packer full AWS env here
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ env.AWS_REGION }}
         run: |
           AMI_ID=$(packer build -machine-readable \
