--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -37,17 +37,23 @@ jobs:
         run: |
           echo "env_dir=Infra/terraform/envs/${{ github.event.inputs.environment }}" >> "$GITHUB_OUTPUT"
 
+      # 🔥 Proper AWS credentials setup (applies to whole job)
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      # Optional: sanity check that creds really work
+      - name: Verify AWS identity
+        run: |
+          aws sts get-caller-identity
+
       - name: Install Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: "1.9.0"
-
-      - name: Configure AWS credentials
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: |
-          aws sts get-caller-identity || echo "AWS creds check complete"
 
       - name: Terraform init
         working-directory: ${{ steps.env_selector.outputs.env_dir }}
