--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -29,11 +29,22 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Packer init
+        working-directory: Infra/packer
         run: packer init app-ami.pkr.hcl
 
+      - name: Validate Packer template
+        working-directory: Infra/packer
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ env.AWS_REGION }}
+        run: |
+          packer validate app-ami.pkr.hcl
+
       - name: Packer build AMI
+        working-directory: Infra/packer
         id: packer-build
-        env:                       # step-level env, now you CAN use contexts
+        env:
           AWS_REGION: ${{ env.AWS_REGION }}
           DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }}
         run: |
