--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  DOCKER_IMAGE: akshithanandre/spring-boot-demo:latest  # latest from your docker workflow
+  DOCKER_IMAGE: akshithanandre/spring-boot-demo:latest  # image pushed by your docker workflow
 
 jobs:
   build-ami:
@@ -28,27 +28,40 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Packer init
-        working-directory: Infra/packer
-        run: packer init app-ami.pkr.hcl
+      - name: Debug – list packer folder
+        run: ls -R Infra/packer
 
-      - name: Packer build AMI
+      - name: Packer validate
         working-directory: Infra/packer
-        id: packer-build
         env:
           AWS_REGION: ${{ env.AWS_REGION }}
           DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }}
         run: |
-          AMI_ID=$(packer build -machine-readable \
+          packer validate \
             -var "aws_region=${AWS_REGION}" \
             -var "docker_image=${DOCKER_IMAGE}" \
-            app-ami.pkr.hcl | awk -F, '$0 ~/artifact,0,id/ {print $6}' | sed 's/.*://')
+            app-ami.pkr.hcl
 
-          echo "Built AMI: $AMI_ID"
-          echo "ami_id=$AMI_ID" >> "$GITHUB_OUTPUT"
+      - name: Packer build AMI
+        id: packer-build
+        working-directory: Infra/packer
+        env:
+          AWS_REGION: ${{ env.AWS_REGION }}
+          DOCKER_IMAGE: ${{ env.DOCKER_IMAGE }}
+        run: |
+          echo "Using docker image: ${DOCKER_IMAGE}"
+
+          # run packer with machine-readable output and capture it
+          PACKER_LOG=1 packer build -machine-readable \
+            -var "aws_region=${AWS_REGION}" \
+            -var "docker_image=${DOCKER_IMAGE}" \
+            app-ami.pkr.hcl | tee packer-output.log
+
+          # extract AMI ID from the machine-readable log
+          AMI_ID=$(grep -m1 'artifact,0,id' packer-output.log | awk -F, '{print $6}' | sed 's/.*://')
+          echo "AMI_ID=${AMI_ID}"
+
+          echo "ami_id=${AMI_ID}" >> "$GITHUB_OUTPUT"
 
       - name: Show AMI ID
         run: echo "AMI ID from Packer = ${{ steps.packer-build.outputs.ami_id }}"
-
-
-
