--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -15,21 +15,23 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-
       - name: Install Packer
         uses: hashicorp/setup-packer@v3
         with:
-          version: latest
+            version: "1.14.3"
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws sts get-caller-identity || echo "AWS creds check complete"
 
-      - name: Debug – list packer folder
-        run: ls -R Infra/packer
+      - name: Packer init
+        working-directory: Infra/packer
+        run: |
+          packer init app-ami.pkr.hcl
+
 
       - name: Packer validate
         working-directory: Infra/packer
