--- a/.github/workflows/packer.yml
+++ b/.github/workflows/packer.yml
@@ -61,3 +61,51 @@ jobs:
 
       - name: Show AMI ID
         run: echo "Created AMI ID = ${{ steps.packer-build.outputs.ami_id }}"
+update-asg:
+  runs-on: ubuntu-latest
+  needs: build-ami
+
+  env:
+    AWS_REGION: ${{ env.AWS_REGION }}
+    LAUNCH_TEMPLATE_NAME: ${{ env.LAUNCH_TEMPLATE_NAME }}
+    ASG_NAME: ${{ env.ASG_NAME }}
+    AMI_ID: ${{ needs.build-ami.outputs.ami_id }}
+
+  steps:
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+
+    - name: Create new launch template version with new AMI
+      run: |
+        echo "Creating new Launch Template version for ${LAUNCH_TEMPLATE_NAME} with AMI ${AMI_ID}"
+        
+        aws ec2 create-launch-template-version \
+          --launch-template-name "${LAUNCH_TEMPLATE_NAME}" \
+          --source-version '$Latest' \
+          --launch-template-data "{\"ImageId\":\"${AMI_ID}\"}" \
+          --region "${AWS_REGION}"
+
+    - name: Update ASG to use latest Launch Template version
+      run: |
+        echo "Updating ASG ${ASG_NAME} to use latest version of LT ${LAUNCH_TEMPLATE_NAME}"
+        
+        aws autoscaling update-auto-scaling-group \
+          --auto-scaling-group-name "${ASG_NAME}" \
+          --launch-template "LaunchTemplateName=${LAUNCH_TEMPLATE_NAME},Version=\$Latest" \
+          --region "${AWS_REGION}"
+
+    - name: Start instance refresh
+      run: |
+        echo "Starting instance refresh on ASG ${ASG_NAME}"
+        
+        aws autoscaling start-instance-refresh \
+          --auto-scaling-group-name "${ASG_NAME}" \
+          --preferences '{
+            "MinHealthyPercentage": 75,
+            "InstanceWarmup": 60
+          }' \
+          --region "${AWS_REGION}"
